ncc/testsuite/positive/this-as-type.n
class A {
  public foo (x : this) : this
  {
    x
  }
}
class B['a] {
  public foo (x : this) : this
  {
    x
  }
}

def a = A ();
_ = a.foo (a) : A;
def b = B.[int]();
_ = b.foo(b) : B[int];
