ncc/testsuite/negative/unbound-tv.n
class A ['a] {}
class B ['b] : A ['a] {} // E: unbound type name `'a'
